add addComment and deleteComment
